@@ -1,6 +1,5 @@
 FreeIPMI 1.4.10 - XX/XX/15
 --------------------------
-o Workaround Set DCMI Asset Tag error on Supermicro motherboards.
 
 FreeIPMI 1.4.9 - 06/01/15
 -------------------------
