@@ -1,3 +1,8 @@
+2015-07-30 Albert Chu <chu11@llnl.gov>
+
+	* ipmi-config/ipmi-config/ipmi-config-category-dcmi-dcmi-conf-section.c (asset_tag_commit):
+	Revert workaround for Supermicro motherboard.
+
 2015-07-27 Albert Chu <chu11@llnl.gov>
 
 	* ipmi-config/ipmi-config/ipmi-config-category-dcmi-dcmi-conf-section.c (asset_tag_commit):
